# winnow

./: .aichorignore  .codespell-ignore.txt  .dockerignore  .env.template  .gitignore  .pr_agent.toml  .pre-commit-config.yaml  CITATION.cff  Dockerfile  Dockerfile.koina  Dockerfile.test  Makefile  README.md  compare_classifiers.py  entrypoint.koina.sh  manifest.yaml  mkdocs.yml  pyproject.toml  requirements.txt  run.sh  setup_precommit.sh
analysis/: analysis.ipynb
config/: calibrator.yaml  predict.yaml  residues.yaml  train.yaml
configs/: config.yaml  deep_calibration.yaml  evaluate_celegans_labelled.yaml  evaluate_celegans_raw.yaml  evaluate_immuno2_labelled.yaml  evaluate_immuno2_raw.yaml  evaluate_test_set.yaml  figshare_deposition.yaml  general_model.yaml  gluc.yaml  helaqc.yaml  herceptin.yaml  immuno.yaml  predict.yaml  predict_de_novo.yaml  predict_de_novo.yaml.template  predict_de_novo_external.yaml.template  predict_labelled.yaml  predict_labelled.yaml.template  predict_validation-general.yaml  sbrodae.yaml  snakevenoms.yaml  test_general_model_validation_data.yaml  train-general.yaml  train.yaml  train.yaml.template  train_general_model.yaml  woundfluids.yaml
docs/: cli.md  configuration.md  contributing.md  examples.md  plm_manuscript_validation.md
examples/: deep_calibration.py  fdr.py  fdr_plots.ipynb  getting_started_with_winnow.ipynb
nets/: __init__.py  classifiers.py
new_configs/: eval_de_novo_PXD019483.yaml  eval_de_novo_herceptin.yaml  eval_de_novo_woundfluids.yaml  eval_labelled_PXD014877.yaml  eval_labelled_PXD023064.yaml  eval_new_model.yaml  eval_raw_PXD014877.yaml  eval_raw_PXD023064.yaml  eval_test_general.yaml
requirements/: README.md  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
scripts/: ablation_study.py  add_db_fdr.py  analyze_fdr_overlap.py  analyze_features.py  analyze_novelty.py  analyze_upscored_fps.py  annotate_preds_proteome_hits.py  calculate_recall_at_fdr.py  calibrator_generalisation_utils.py  commit_coverage_badge.sh  compare_classifiers.py  create_holdout_plots.py  create_holdout_sets.py  create_new_model_plots.py  create_train_test_split.py  download_spectra.py  evaluate_calibrator_generalisation.py  evaluate_calibrator_generalization.py  feature_subsets.py  figshare_deposition_manifest.py  generate_sample_data.py  hpo_best_trial.yaml  hpo_config.yaml  (+25 more)
(+225 files in other folders)
