[project]
name = "winnow"
authors = [{name="InstaDeep"}]
description = "Score calibration and false discovery estimation for de novo peptide sequencing."
readme = "README.md"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "ipywidgets>=8.1.5",
    "koinapy>=0.0.10",
    "tomli>=2.2.1",
    "typer>=0.15.2",
    "instanovo>=1.1.4",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["winnow"]

[dependency-groups]
analysis = [
    "bio>=1.8.0",
    "shap>=0.48.0",
    "xgboost>=3.0.2",
]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
]
notebook = [
    "huggingface-hub>=0.29.3",
    "ipykernel>=6.30.0",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "kaleido>=1.0.0",
    "plotly>=6.3.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[project.scripts]
winnow='winnow.scripts.main:app'
