[project]
name = "winnow"
authors = [{name="InstaDeep"}]
description = "Score calibration and false discovery estimation for de novo peptide sequencing."
readme = "README.md"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "ipywidgets>=8.1.5",
    "koinapy>=0.0.10",
    "tomli>=2.2.1",
    "typer>=0.15.2",
    "instanovo>=1.1.4",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["winnow"]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
]
docs = [
    "markdown-include>=0.8.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.18",
    "pymdown-extensions>=10.16.1",
]

[project.scripts]
winnow='winnow.scripts.main:app'
